# rate-allocator

./: .gitignore  LICENSE  NOTEBOOK_GUIDE.md  README.md  READY.md  START_HERE.md  pyproject.toml  requirements.txt  streamlit_app.py
data/: regulatory_rules.mx.yaml  sample1.yaml  sample2.yaml  sample3.yaml  sample_institutions.json
docs/: assumptions.md
notebooks/: demo.ipynb  demo_ipywidgets.ipynb  demo_ipywidgets_en.ipynb  demo_ipywidgets_es.ipynb
scripts/: generate_decero_vista_sample.py
src/rate_allocator/: __init__.py  allocator.py  io.py  models.py  summary.py
src/rate_allocator/adapters/: __init__.py  regulatory_loader.py  yaml_loader.py
src/rate_allocator/core/: __init__.py
src/rate_allocator/core/finance/: __init__.py  costs.py  rates.py  taxes.py
src/rate_allocator/core/optimizer/: __init__.py  solve.py
src/rate_allocator/domain/: __init__.py  models.py
src/rate_allocator/reporting/: __init__.py  summary.py  visuals.py
src/rate_allocator/workflows/: __init__.py  analysis.py  interactive_report.py
tests/: test_allocator.py  test_summary.py
